# saneround

./: README.md  pyproject.toml  setup.cfg
saneround/: __init__.py  saneround.py
tests/: test_round.py
