[metadata]
name = saneround
version = attr: saneround.__version__
author = yamaimo
author_email = hello@yamaimo.dev
description = Python package providing sane round() instead of official insane round().
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/yamaimo/saneround

[options]
packages =
    saneround
